8285518: CDS assert: visibility cannot change between dump time and runtime